// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConsentSettingsLink with children renders link with custom text 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  color: #3358CC;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,fill;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #254CAC;
}

.emotion-0:active:not(:disabled) {
  color: #12387A;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #12387A;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  display: block;
}

.emotion-2::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-2::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        Some Custom Link Text
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`ConsentSettingsLink with link props renders link with styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  color: #3358CC;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,fill;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #254CAC;
}

.emotion-0:active:not(:disabled) {
  color: #12387A;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #12387A;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  font-family: "DM Sans",sans-serif;
  font-size: 12px;
  line-height: 18px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  display: block;
}

.emotion-2::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-2::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        Some Custom Link Text With Styles
      </span>
    </span>
  </a>
</DocumentFragment>
`;

exports[`ConsentSettingsLink with no children renders link with default text 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  color: #3358CC;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-0 {
    transition-property: color,fill;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-0 {
    transition-property: color,fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-0:hover:not(:disabled) {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #254CAC;
}

.emotion-0:active:not(:disabled) {
  color: #12387A;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0:active:not(:disabled) svg {
  fill: #12387A;
}

.emotion-0:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-0:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  margin: 0;
  font-family: "Poppins",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 500;
  letter-spacing: 0;
  padding: 0.5px 0px;
  display: inline-block;
  display: block;
}

.emotion-2::before {
  content: '';
  margin-bottom: -0.403em;
  display: block;
}

.emotion-2::after {
  content: '';
  margin-top: -0.4em;
  display: block;
}

<a
    class="emotion-0"
    href="#"
    role="button"
  >
    <span
      class="emotion-1"
    >
      <span
        class="emotion-2"
      >
        Manage Consent
      </span>
    </span>
  </a>
</DocumentFragment>
`;
